hphp/hack/test/typecheck/reified_generics/newable_tparams_transitive.php.exp
File "newable_tparams_transitive.php", line 16, characters 19-22:
The type parameter Tbad has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final or have a constructor that is consistent. This can be accomplished by making the constructor final or having <<__ConsistentConstruct>>. No constraints are valid newable classes (Typing[4308])
